--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
         </div>
         <div class="form-group">
             <button type="submit">Send Message</button>
-            <a href="home.html" class="home-button"><button type="button">Go To Home Page</button></a>
+            <a href="landing.html" class="home-button"><button type="button">Go To Home Page</button></a>
         </div>
     </form>
 </body>
