--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5;url=home.html">
+    <meta http-equiv="refresh" content="5;url=landing.html">
     <title>Redirecting...</title>
     <style>
         body {
@@ -39,7 +39,7 @@
                     countdownElement.innerText = count.toString();
                 } else {
                     clearInterval(countdown);
-                    window.location.href = 'home.html'; // Redirect URL
+                    window.location.href = 'landing.html'; // Redirect URL
                 }
             }, 1000);
         }
