--- a/professional.html
+++ b/professional.html
@@ -76,7 +76,7 @@
     <div class="container">
         <img src="SIBONGA_JOHN VINCENT_BSECE.jpg" alt="Profile Picture" class="profile-pic">
         <div class="nav">
-            <a href="home.html">Home</a>
+            <a href="landing.html">Home</a>
             <a href="professional.html">Professional</a>
             <a href="personal.html">Personal</a>
             <a href="contact.html">Contacts</a>
