--- a/landing.html
+++ b/landing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Web Developer</title>
+    <title>celen-dipity_web-page</title>
     <style>
         /* Reset some default styles */
         body, html {
@@ -87,6 +87,11 @@
         <p>Hi! I'm Vincent. I enjoy generating innovative ideas and solutions to solve existing relevant problems in the society. I'm always passionate about helping the society through development of data-centric and sustainable technology-based solutions.</p>
         <a href="professional.html" class="btn">View Professional Profile</a>
         <a href="personal.html" class="btn">View Personal Profile</a>
+        <a href="quiz.html" class="btn">Study Nihongo</a>
+    </div>
+
+    <div class="main-content">
+        <a href="quiz.html" class="btn">Study Nihongo</a>
     </div>
     
     <footer>
